--- a/app/styles/pages/our_programs/angel-tree-christmas.scss
+++ b/app/styles/pages/our_programs/angel-tree-christmas.scss
@@ -7,6 +7,12 @@
         img {
             padding: 0 12rem;
             width: calc(100% - 24rem);
+
+            @media only screen and (max-width: 600px) {
+                width: 100%;
+                height: auto;
+                padding: 0rem;
+            }
         }
     }
 
